@@ -111,6 +111,9 @@ The blob view::
 The blame view::
 	Displays the file content annotated or blamed by commits.
 
+The branch view::
+	Displays the branches in the repository.
+
 The status view::
 	Displays status of files in the working tree and allows changes to be
 	staged/unstaged as well as adding of untracked files.
@@ -316,6 +319,7 @@ p	Switch to pager view.
 t	Switch to (directory) tree view.
 f	Switch to (file) blob view.
 B	Switch to blame view.
+H	Switch to branch view.
 h	Switch to help view
 S	Switch to status view
 c	Switch to stage view
